add libs